dotnetapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-dotnetcore-deployment
  labels:
    app: workshop-dotnetcore
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dotnetcore
  template:
    metadata:
      labels:
        app: dotnetcore
    spec:
      containers:
      - name: dotnetcore-container
        image: mcr.microsoft.com/dotnet/core/samples:aspnetapp
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /app/appsettings.json #mount the nginx config
          subPath: appsettings.json
          readOnly: true
          name: appsettings-volume
      volumes:
      - name: appsettings-volume
        configMap:
          name: appsettings-configmap # reference the ConfigMap
          items:
          - key: appsettings.json
            path: appsettings.json
