dotnetcore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetapp-service
spec:
  type: ClusterIP
  selector:
    app: dotnetcore
  ports:
    - protocol: TCP
      port: 801
      targetPort: 80
      nodePort: 30180
