dotnetcore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnetapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /dotnetapp
        pathType: Prefix
        backend:
          service:
            name: dotnetapp-service
            port:
              number: 801
